--- a/build.gradle
+++ b/build.gradle
@@ -9,10 +9,13 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
+
+apply from: 'local.properties.gradle'
 
 group = 'org.stephenbrewer'
 version = '0.1.1'
