--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,11 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.31'
+    ext {
+        appcompat_version = '1.0.2'
+        kotlin_version = '1.3.31'
+        lifecycle_version = '2.0.0'
+    }
     repositories {
         google()
         jcenter()
