Adding tests for LifecycleAwareCommand and Transformations.

--- a/arch-ext/build.gradle
+++ b/arch-ext/build.gradle
@@ -49,6 +49,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
+    testImplementation "androidx.arch.core:core-testing:$arch_core_version"
+    testImplementation "io.mockk:mockk:$mockk_version"
     testImplementation 'junit:junit:4.12'
 
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
