--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,11 @@
 
 buildscript {
     ext {
-        appcompat_version = '1.0.2'
+        arch_core_version = '2.0.1'
+        appcompat_version = '1.1.0'
         kotlin_version = '1.3.50'
-        lifecycle_version = '2.0.0'
+        lifecycle_version = '2.1.0'
+        mockk_version = '1.9.3'
     }
     repositories {
         google()
@@ -22,7 +24,7 @@ buildscript {
 apply from: 'local.properties.gradle'
 
 group = 'org.stephenbrewer'
-version = '0.1.2'
+version = '0.1.3'
 
 allprojects {
     repositories {
