--- a/RecyclerView/build.gradle
+++ b/RecyclerView/build.gradle
@@ -81,5 +81,8 @@ bintray {
         name = 'recyclerview'
         licenses = ['Apache-2.0']
         vcsUrl = 'https://github.com/stephen-brewer/CommonCode.git'
+        version {
+            name = rootProject.version
+        }
     }
 }
